--- a/docs/components/grid/code.mdx
+++ b/docs/components/grid/code.mdx
@@ -36,7 +36,7 @@ npm install @siemens/ix-aggrid
 
 Import and configure the IX theme:
 
-```typescript
+```javascript
 import { useIxTheme } from '@siemens/ix-aggrid';
 import { provideGlobalGridOptions } from 'ag-grid-community';
 
