--- a/docs/components/grid/code.mdx
+++ b/docs/components/grid/code.mdx
@@ -40,9 +40,7 @@ Import and configure the IX theme:
 import { useIxTheme } from '@siemens/ix-aggrid';
 import { provideGlobalGridOptions } from 'ag-grid-community';
 
-const ixTheme = await useIxTheme(async () => {
-  return await import('ag-grid-community');
-});
+const ixTheme = await useIxTheme(() => import('ag-grid-community'));
 
 provideGlobalGridOptions({
   theme: ixTheme
