--- a/docs/components/grid/code.mdx
+++ b/docs/components/grid/code.mdx
@@ -37,13 +37,22 @@ npm install @siemens/ix-aggrid
 Import and configure the IX theme:
 
 ```javascript
-import { useIxTheme } from '@siemens/ix-aggrid';
+import { getIxTheme } from '@siemens/ix-aggrid';
 import { provideGlobalGridOptions } from 'ag-grid-community';
 
-const ixTheme = await useIxTheme(() => import('ag-grid-community'));
+// Get iX theme based on your ag-grid module
+const ixTheme = await getIxTheme(() => import('ag-grid-community'));
 
+// Set the theme in your grid options
+const gridOptions = {
+  theme: ixTheme,
+  // Rest of options
+}
+
+// Or set the theme globally for all grids
+// Make sure to do this before initializing any grid
 provideGlobalGridOptions({
-  theme: ixTheme
+  theme: ixTheme,
 });
 ```
 
