docs: updated docu illustrations

--- a/docs/components/input-time/guide.mdx
+++ b/docs/components/input-time/guide.mdx
@@ -53,7 +53,7 @@ Time inputs are typically used in forms, filters and scheduling tools to ensure 
 
 Time input has five states: Default, hover, disabled, read-only and focused.
 
-![Time input states](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Pattern-Illustrations?node-id=3989-2545&t=ADQCetGKOEH1WG2r-4)
+![Time input states](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Documentation-illustrations?node-id=7147-9559&t=DrLi4Tgyh22TBGiT-4)
 
 ## Dos and Don’ts
 
