--- a/docs/components/charts-overview/index.mdx
+++ b/docs/components/charts-overview/index.mdx
@@ -57,19 +57,21 @@ registerTheme(echarts);
 
 The Siemens Industrial Experience ECharts theme provides a set of colors that are used to style the charts. These colors are optimized for accessibility and readability.
 
-**Categorical data**
+### Categorical data
 For easily distinguishable data series where each category is distinct but not ordered, we recommend the following color sequence. 
 Example: Different product types or regions.
 
 ![Colors for categorical data](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Pattern-Illustrations?node-id=3223-1647&t=MD9MvUCkoIcmSi8H-4)
 
-**Sequential data**
-For ordered data, we recommend using every second color, e.g. chart-1, chart-3, chart-5, etc. Example: monthly data.
+### Sequential data
+For ordered data, we recommend using every second color, e.g. chart-1, chart-3, chart-5.
+Example: monthly data.
 
 ![Colors for sequential data](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Pattern-Illustrations?node-id=3225-2412&t=MD9MvUCkoIcmSi8H-4)
 
-**Comparative data**
-For comparing data within a category, we recommend using the matching -40 color with 40% opacity. Example: last year and current year.
+### Comparative data
+For comparing data within a category, we recommend using the matching -40 color with 40% opacity.
+Example: last year and current year.
 
 ![Colors for comparative data](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Pattern-Illustrations?node-id=3225-2885&t=MD9MvUCkoIcmSi8H-4)
 
@@ -92,9 +94,9 @@ A failure occurs when no data can be displayed within the chart. This can happen
 - State problem: What happened?​ Add a clear reason for the error, e.g. “No data available”
 - Explain cause: Why did the error appear?​ A clear and concise message explaining why the error happened, e.g. "Connection failure"
 - Give solution: What can the user do to proceed?​
-  Add clear instructions for the user regarding what to do next to resolve the error, e.g. “Try again”
+- Add clear instructions for the user regarding what to do next to resolve the error, e.g. “Try again”
 
-For more detailed information and examples, see the UX writing style guide.
+For more detailed information and examples, see the [UX writing style guide](./guidelines/language/error-messages).
 
 ## Missing data points
 
