Fix broken link to UX writing style guide
Updated the reference to the UX writing style guide in the charts overview documentation to point to the correct path.

--- a/docs/components/charts-overview/index.mdx
+++ b/docs/components/charts-overview/index.mdx
@@ -96,7 +96,7 @@ A failure occurs when no data can be displayed within the chart. This can happen
 - Give solution: What can the user do to proceed?​
 - Add clear instructions for the user regarding what to do next to resolve the error, e.g. “Try again”
 
-For more detailed information and examples, see the [UX writing style guide](./guidelines/language/error-messages).
+For more detailed information and examples, see the [UX writing style guide](docs/guidelines/language/error-messages.md).
 
 ## Missing data points
 
