Add text alignment and submit-on-enter docs for form inputs
Documented the 'text alignment' option for input, input-date, input-time, and input-number components, referencing the form field guide. Added a new 'Submit on enter' strategy to the forms behavior documentation, explaining its pros, cons, and accessibility considerations. Minor formatting and related links updates in various guides.

--- a/docs/components/forms-behavior/index.mdx
+++ b/docs/components/forms-behavior/index.mdx
@@ -55,7 +55,18 @@ In this strategy, there is no need for a submit button. The form is automaticall
 
 For more information on form validation, refer to the [validation](./forms-validation) chapter.
 
+### Strategy 4: Submit on enter
+
+Single-line input controls (e.g. [text input](./input) and [number input](./number-input)) submit their parent form when the user presses Enter while focused. This behaviour speeds up common workflows such as quick searches or single-field actions.
+
+- Pro: Speeds up short, single-field interactions (e.g. search boxes or quick actions) where Enter clearly means "send" or "search".
+- Pro: Removes the need for an explicit submit control, simplifying the UI and streamlining common workflows.
+- Con: Not suitable for multiline inputs (textarea) or multi-field forms that require review — can cause accidental submissions.
+- Con: May submit partial or unintended data and make it harder for users to review before sending.
+- Con: Can introduce accessibility issues if keyboard-only and screen-reader workflows aren't verified; ensure behavior is predictable and communicated to assistive technology users.
+
 ## Related
 
 - [Validation](./forms-validation)
 - [Layout](./forms-layout)
+
