Fix links  (Again)

--- a/docs/components/forms-behavior/index.mdx
+++ b/docs/components/forms-behavior/index.mdx
@@ -57,7 +57,7 @@ For more information on form validation, refer to the [validation](./forms-valid
 
 ### Strategy 4: Submit on enter
 
-Single-line input controls (e.g. [text input](../input) and [number input](../input-number)) submit their parent form when the user presses Enter while focused. This behaviour speeds up common workflows such as quick searches or single-field actions.
+Single-line input controls (e.g. [text input](./input) and [number input](./input-number)) submit their parent form when the user presses Enter while focused. This behaviour speeds up common workflows such as quick searches or single-field actions.
 
 - Pro: Speeds up short, single-field interactions (e.g. search boxes or quick actions) where Enter clearly means "send" or "search".
 - Pro: Removes the need for an explicit submit control, simplifying the UI and streamlining common workflows.
