Apply suggestions from final edit
Co-authored-by: tokyojen <143795032+tokyojen@users.noreply.github.com>

--- a/docs/components/forms-behavior/index.mdx
+++ b/docs/components/forms-behavior/index.mdx
@@ -61,9 +61,9 @@ Single-line input controls (e.g. [text input](./input) and [number input](./inpu
 
 - Pro: Speeds up short, single-field interactions (e.g. search boxes or quick actions) where Enter clearly means "send" or "search".
 - Pro: Removes the need for an explicit submit control, simplifying the UI and streamlining common workflows.
-- Con: Not suitable for multiline inputs (textarea) or multi-field forms that require review — can cause accidental submissions.
+- Con: Not suitable for multi-line inputs (textarea) or multi-field forms that require review — can cause accidental submissions.
 - Con: May submit partial or unintended data and make it harder for users to review before sending.
-- Con: Can introduce accessibility issues if keyboard-only and screen-reader workflows aren't verified; ensure behavior is predictable and communicated to assistive technology users.
+- Con: Can introduce accessibility issues when keyboard-only and screen-reader workflows aren't verified; ensure behavior is predictable and communicated to assistive technology users.
 
 ## Related
 
