--- a/docs/components/input-time/guide.mdx
+++ b/docs/components/input-time/guide.mdx
@@ -59,26 +59,15 @@ Time input has five states: Default, hover, disabled, read-only and focused.
 ## Dos and Don’ts
 
 <DoAndDont>
-<DoAndDont.Do>
-<DoAndDont.Item>
-Do use consistent time formats throughout the application to avoid
-confusion
-</DoAndDont.Item>
-<DoAndDont.Item>
-Do add helper text to clarify the time format being used{' '}
-</DoAndDont.Item>
-<DoAndDont.Item>
-Do ensure the time picker is accessible via keyboard
-</DoAndDont.Item>
-<DoAndDont.Item>
-Do consider localization to adapt time formats to local conventions
-</DoAndDont.Item>
-</DoAndDont.Do>
-<DoAndDont.Dont>
-<DoAndDont.Item>
-Don’t use the same input for start and end times, instead separate them
-</DoAndDont.Item>
-</DoAndDont.Dont>
+  <DoAndDont.Do>
+    <DoAndDont.Item>Do use consistent time formats throughout the application to avoid confusion</DoAndDont.Item>
+    <DoAndDont.Item>Do add helper text to clarify the time format being used{' '}</DoAndDont.Item>
+    <DoAndDont.Item>Do ensure the time picker is accessible via keyboard</DoAndDont.Item>
+    <DoAndDont.Item>Do consider localization to adapt time formats to local conventions</DoAndDont.Item>
+  </DoAndDont.Do>
+  <DoAndDont.Dont>
+    <DoAndDont.Item>Don’t use the same input for start and end times, instead separate them</DoAndDont.Item>
+  </DoAndDont.Dont>
 </DoAndDont>
 
 ## Related
