Apply suggestions from final edit
Co-authored-by: tokyojen <143795032+tokyojen@users.noreply.github.com>

--- a/docs/components/charts-overview/index.mdx
+++ b/docs/components/charts-overview/index.mdx
@@ -55,7 +55,7 @@ For Angular, make sure to correctly add `NgxEcharts` in your module file.
 The Siemens Industrial Experience ECharts theme provides a set of colors that are used to style the charts. These colors are optimized for accessibility and readability.
 
 ### Categorical data
-For easily distinguishable data series where each category is distinct but not ordered, we recommend the following color sequence.
+For easily distinguishable data series, where each category is distinct but not ordered, we recommend the following color sequence.
 Example: Different product types or regions.
 
 ![Colors for categorical data](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Pattern-Illustrations?node-id=3223-1647&t=MD9MvUCkoIcmSi8H-4)
@@ -90,7 +90,7 @@ A failure occurs when no data can be displayed within the chart. This can happen
 
 - State problem: What happened?​ Add a clear reason for the error, e.g. “No data available”
 - Explain cause: Why did the error appear?​ A clear and concise message explaining why the error happened, e.g. "Connection failure"
-- Give solution: What can the user do to proceed?​ Add clear instructions for the user regarding what to do next to resolve the error, e.g. “Try again”
+- Give solution: What can the user do to move forward?​ Add clear instructions for the user regarding what to do next to resolve the error, e.g. “Try again”
 
 For more detailed information and examples, see the [UX writing style guide](docs/guidelines/language/error-messages.md).
 
