Add usage guides for modal components
Introduces detailed usage guides for loading modal, message modal, and custom modal components. Updates sidebar and tab labels for consistency, improves descriptions, and adds related links to progress indicator and toast guides for better documentation navigation.

--- a/docs/components/modal/index.mdx
+++ b/docs/components/modal/index.mdx
@@ -1,6 +1,6 @@
 ---
 doc-type: "tabs"
-description: 'Modals present information prominently and are useful for gathering essential user input without navigating to another page.'
+description: 'Modals appear on top of the main content of a webpage or application, blocking interaction with the rest of the page until the user completes a specific action or closes the modal.'
 title: 'Modal'
 deprecated:
 ---
