--- a/docs/components/modal/code.mdx
+++ b/docs/components/modal/code.mdx
@@ -199,7 +199,7 @@ import { IxApplicationContext } from '@siemens/ix-vue';
 <ModalConfig />
 <ModalInstance />
 
-## API for Modal Utils (JavaScript, React, Vue)
+## API for modal utils (JavaScript, React, Vue)
 
 ### Functions
 <ModalUtils />
