--- a/docs/guidelines/language/formatting/measurements.mdx
+++ b/docs/guidelines/language/formatting/measurements.mdx
@@ -8,52 +8,62 @@ no_single_tab: true
 description: In industrial settings, accurate measurements are vital for ensuring process efficiency, safety and product quality. These measurements range from basic dimensions, like length, width, and height, to complex parameters such as temperature, pressure, and flow rate. Proper unit writing is essential to help users interpret data correctly and make informed decisions.
 ---
 
-import DoAndDont from '@site/src/components/DoAndDont';
-
 ## General rules
 
 Use the same measurement format and style throughout your user interface and consider localization conflicts. Write out measurement abbreviations in full if there is any chance users will not understand.
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>British Thermal Unit (BTU): 1</DoAndDont.Item>
-		<DoAndDont.Item>Nautical Mile (nmi): 8</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>BTU: 1</DoAndDont.Item>
-		<DoAndDont.Item>nmi: 8</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
 
-Avoid line breaks between the value and the unit by using a protected (non-breaking) space. Use the singular when talking about a specific number and in abbreviations. Use lower case as the default for most unit abbreviations.
+- British Thermal Unit (BTU): 1
+- Nautical Mile (nmi): 8
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>200 kg</DoAndDont.Item>
-		<DoAndDont.Item>20 kg</DoAndDont.Item>
-		<DoAndDont.Item>4 in</DoAndDont.Item>
-		<DoAndDont.Item>200 g</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>200kg</DoAndDont.Item>
-		<DoAndDont.Item>20 kgs</DoAndDont.Item>
-		<DoAndDont.Item>4 in.</DoAndDont.Item>
-		<DoAndDont.Item>200 G</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+</div>
+<div class="donts" markdown>
+
+- BTU: 1
+- nmi: 8
+
+</div>
+</div>
+
+Avoid line breaks between the value and the unit by using a protected (non-breaking) space. Use the singular when talking about a specific number and in abbreviations. Use lower case as the default for most unit abbreviations.
+
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- 200 kg
+- 20 kg
+- 4 in
+- 200 g
+
+</div>
+<div class="donts" markdown>
+
+- 200kg
+- 20 kgs
+- 4 in.
+- 200 G
+
+</div>
+</div>
 
 Use upper case for unit abbreviations named after people and lower case when the abbreviation is written out in full.
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>6 volts</DoAndDont.Item>
-		<DoAndDont.Item>6 V</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>6 Volts</DoAndDont.Item>
-		<DoAndDont.Item>6 v</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- 6 volts
+- 6 V
+
+</div>
+<div class="donts" markdown>
+
+- 6 Volts
+- 6 v
+
+</div>
+</div>
 
 | Person | Unit abbreviation |
 | ------ | ----------------- |
@@ -67,124 +77,160 @@ Use upper case for unit abbreviations named after people and lower case when the
 
 Use a slash to show how compound units are divided for clarity.
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>km/h</DoAndDont.Item>
-		<DoAndDont.Item>A/m</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>km-h</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- km/h
+- A/m
+
+</div>
+<div class="donts" markdown>
+
+- km-h
+
+</div>
+</div>
 
 ## Exceptions
 
-Use “L” (liter) instead of lower case “l” only if there is any doubt users will confuse it with “1”.
+Use "L" (liter) instead of lower case "l" only if there is any doubt users will confuse it with "1".
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>2 L</DoAndDont.Item>
-		<DoAndDont.Item>11 L</DoAndDont.Item>
-		<DoAndDont.Item>2 l</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>11 l</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
 
-Use upper case “B” to abbreviate byte and lower case “b” to abbreviate bit. Use M for mega, G for giga and T for tera to distinguish from m (milli), g (gram) and t (ton).
+- 2 L
+- 11 L
+- 2 l
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>120 MB (megabytes)</DoAndDont.Item>
-		<DoAndDont.Item>120 Mb (megabits)</DoAndDont.Item>
-		<DoAndDont.Item>1 t</DoAndDont.Item>
-		<DoAndDont.Item>1 TB</DoAndDont.Item>
-		<DoAndDont.Item>1 THz</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>1 T</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+</div>
+<div class="donts" markdown>
+
+- 11 l
+
+</div>
+</div>
+
+Use upper case "B" to abbreviate byte and lower case "b" to abbreviate bit. Use M for mega, G for giga and T for tera to distinguish from m (milli), g (gram) and t (ton).
+
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- 120 MB (megabytes)
+- 120 Mb (megabits)
+- 1 t
+- 1 TB
+- 1 THz
+
+</div>
+<div class="donts" markdown>
+
+- 1 T
+
+</div>
+</div>
 
 ## Volume
 
 Use superscript to indicate cubed measurements.
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>m³</DoAndDont.Item>
-		<DoAndDont.Item>cm³</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>m3</DoAndDont.Item>
-		<DoAndDont.Item>cm3</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- m³
+- cm³
+
+</div>
+<div class="donts" markdown>
+
+- m3
+- cm3
+
+</div>
+</div>
 
 Use the plain text caret symbol (^) when superscript is not possible in your application.
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>m^3</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>m3</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- m^3
+
+</div>
+<div class="donts" markdown>
+
+- m3
+
+</div>
+</div>
 
 Use mcg to abbreviate microgram instead of the Greek letter mu (μ).
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>1000 mcg</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>1000 μg</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- 1000 mcg
+
+</div>
+<div class="donts" markdown>
+
+- 1000 μg
+
+</div>
+</div>
 
 ## Temperature
 
 Use a non-breaking space (Ctrl + Shift + Space) between the number and the degree symbol.
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>23 °C</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>23°C</DoAndDont.Item>
-		<DoAndDont.Item>23° C</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- 23 °C
+
+</div>
+<div class="donts" markdown>
+
+- 23°C
+- 23° C
+
+</div>
+</div>
 
 Use the degree symbol (°) before the initial letter of the temperature scale without a space.
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>23 °C</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>23 C°</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- 23 °C
+
+</div>
+<div class="donts" markdown>
+
+- 23 C°
+
+</div>
+</div>
 
 ## Web
 
-Use “px” in lower case to abbreviate pixels with a space for readability without periods after px, pt and dpi (dots per inch).
+Use "px" in lower case to abbreviate pixels with a space for readability without periods after px, pt and dpi (dots per inch).
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>45 px</DoAndDont.Item>
-		<DoAndDont.Item>1280 x 780 px</DoAndDont.Item>
-		<DoAndDont.Item>4 pt</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>45PX</DoAndDont.Item>
-		<DoAndDont.Item>1280x780px</DoAndDont.Item>
-		<DoAndDont.Item>4pt.</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- 45 px
+- 1280 x 780 px
+- 4 pt
+
+</div>
+<div class="donts" markdown>
+
+- 45PX
+- 1280x780px
+- 4pt.
+
+</div>
+</div>
 
 ## Related
 
