--- a/docs/guidelines/language/formatting/numbers.mdx
+++ b/docs/guidelines/language/formatting/numbers.mdx
@@ -8,235 +8,299 @@ no_single_tab: true
 description: In industrial settings, numbers and percentages are key to tracking performance, spotting trends, and making informed decisions. As there are many ways to write them, these guidelines aim to keep usage consistent across teams.
 ---
 
-import DoAndDont from '@site/src/components/DoAndDont';
-
 # Numbers and percentages
 
 ## General rules
 
-Write “Number” or ”number” when there is enough space within the user interface.
+Write "Number" or "number" when there is enough space within the user interface.
 
-<DoAndDont>
-  <DoAndDont.Do>
-    <DoAndDont.Item>Number</DoAndDont.Item>
-  </DoAndDont.Do>
-  <DoAndDont.Dont>
-    <DoAndDont.Item>Num.</DoAndDont.Item>
-  </DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
 
-Use “No.” as an abbreviation for number with a period and without a space.
+- Number
 
-<DoAndDont>
-  <DoAndDont.Do>
-    <DoAndDont.Item>No.6</DoAndDont.Item>
-  </DoAndDont.Do>
-  <DoAndDont.Dont>
-    <DoAndDont.Item>Num.6</DoAndDont.Item>
-  </DoAndDont.Dont>
-</DoAndDont>
+</div>
+<div class="donts" markdown>
+
+- Num.
+
+</div>
+</div>
+
+Use "No." as an abbreviation for number with a period and without a space.
+
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- No.6
+
+</div>
+<div class="donts" markdown>
+
+- Num.6
+
+</div>
+</div>
 
 Avoid using the # symbol with numbers.
 
-<DoAndDont>
-  <DoAndDont.Do>
-    <DoAndDont.Item>Number 6</DoAndDont.Item>
-  </DoAndDont.Do>
-  <DoAndDont.Dont>
-    <DoAndDont.Item>#6</DoAndDont.Item>
-  </DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
 
-Write numbers as digits, such as “9” instead of “nine”, in industrial user interfaces.
+- Number 6
 
-<DoAndDont>
-  <DoAndDont.Do>
-    <DoAndDont.Item>We’ve released 3 new features this month.</DoAndDont.Item>
-  </DoAndDont.Do>
-  <DoAndDont.Dont>
-    <DoAndDont.Item>We’ve released three new features this month.</DoAndDont.Item>
-  </DoAndDont.Dont>
-</DoAndDont>
+</div>
+<div class="donts" markdown>
+
+- #6
+
+</div>
+</div>
+
+Write numbers as digits, such as "9" instead of "nine", in industrial user interfaces.
+
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- We've released 3 new features this month.
+
+</div>
+<div class="donts" markdown>
+
+- We've released three new features this month.
+
+</div>
+</div>
 
 Write numbers with four digits and more with commas to separate thousands, millions, etc. in American English.
 
-<DoAndDont>
-  <DoAndDont.Do>
-    <DoAndDont.Item>100,000</DoAndDont.Item>
-  </DoAndDont.Do>
-  <DoAndDont.Dont>
-    <DoAndDont.Item>100.000</DoAndDont.Item>
-  </DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- 100,000
+
+</div>
+<div class="donts" markdown>
+
+- 100.000
+
+</div>
+</div>
 
 ## Numbers and punctuation
 
 Use en dashes (–) instead of hyphens (-) for ranges.
 
-<DoAndDont>
-  <DoAndDont.Do>
-    <DoAndDont.Item>10–0</DoAndDont.Item>
-     <DoAndDont.Item>The shipment weighs 50–75kg</DoAndDont.Item>
-  </DoAndDont.Do>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- 10–0
+- The shipment weighs 50–75kg
+
+</div>
+</div>
 
 Write out the unit only once in ranges.
 
-<DoAndDont>
-  <DoAndDont.Do>
-    <DoAndDont.Item>The temperature fluctuated between 20–25°C</DoAndDont.Item>
-  </DoAndDont.Do>
-  <DoAndDont.Dont>
-     <DoAndDont.Item>The temperature fluctuated between 20°C–25°C</DoAndDont.Item>
-  </DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- The temperature fluctuated between 20–25°C
+
+</div>
+<div class="donts" markdown>
+
+- The temperature fluctuated between 20°C–25°C
+
+</div>
+</div>
 
 Use the minus hyphen for negative numbers which is better aligned than a normal hyphen (Unicode U+2212).
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>-12</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>—12</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
 
-Use either “to” or separate text fields for ranges with minus numbers for readability.
+- -12
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>-12 to -15°C</DoAndDont.Item>
-		<DoAndDont.Item>Min temp (C): -12° / Max temp (C): -15°</DoAndDont.Item>
-	</DoAndDont.Do>
-</DoAndDont>
+</div>
+<div class="donts" markdown>
+
+- —12
+
+</div>
+</div>
+
+Use either "to" or separate text fields for ranges with minus numbers for readability.
+
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- -12 to -15°C
+- Min temp (C): -12° / Max temp (C): -15°
+
+</div>
+</div>
 
 ## Decimals
 
 Write decimals using a period (.) to separate the whole number from the fractional part in American English.
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>0.5</DoAndDont.Item>
-		<DoAndDont.Item>5,245.15</DoAndDont.Item>
-		<DoAndDont.Item>2.5 million</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>0,5</DoAndDont.Item>
-		<DoAndDont.Item>5.245,15</DoAndDont.Item>
-		<DoAndDont.Item>2,5 million</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- 0.5
+- 5,245.15
+- 2.5 million
+
+</div>
+<div class="donts" markdown>
+
+- 0,5
+- 5.245,15
+- 2,5 million
+
+</div>
+</div>
 
 ## Thousands, millions and billions
 
-Use “K” as an abbreviation for thousand, “M” for million, and “B” for billion without a period or space. Consider variations in other languages and never use abbreviations when there is doubt.
+Use "K" as an abbreviation for thousand, "M" for million, and "B" for billion without a period or space. Consider variations in other languages and never use abbreviations when there is doubt.
 
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>34K</DoAndDont.Item>
-		<DoAndDont.Item>34M</DoAndDont.Item>
-		<DoAndDont.Item>34B</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>34 k</DoAndDont.Item>
-		<DoAndDont.Item>34 mil</DoAndDont.Item>
-		<DoAndDont.Item>34 bill</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
 
-Use the singular “million” when talking about a specific number.
+- 34K
+- 34M
+- 34B
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>34 million</DoAndDont.Item>
-		<DoAndDont.Item>Our system processes one million connections.</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>34 millions</DoAndDont.Item>
-		<DoAndDont.Item>Our system processes one millions connections.</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+</div>
+<div class="donts" markdown>
 
-Use the plural “millions” when talking about an unspecific number.
+- 34 k
+- 34 mil
+- 34 bill
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>Our goal is to deliver software to millions of happy users worldwide.</DoAndDont.Item>
-	</DoAndDont.Do>
-</DoAndDont>
+</div>
+</div>
 
-Write out numbers in the millions and billions (“one million” instead of “1,000,000”) in longer texts and paragraphs.
+Use the singular "million" when talking about a specific number.
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>We have over one million users worldwide.</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>We have over 1,000,000 users worldwide.</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- 34 million
+- Our system processes one million connections.
+
+</div>
+<div class="donts" markdown>
+
+- 34 millions
+- Our system processes one millions connections.
+
+</div>
+</div>
+
+Use the plural "millions" when talking about an unspecific number.
+
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- Our goal is to deliver software to millions of happy users worldwide.
+
+</div>
+</div>
+
+Write out numbers in the millions and billions ("one million" instead of "1,000,000") in longer texts and paragraphs.
+
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- We have over one million users worldwide.
+
+</div>
+<div class="donts" markdown>
+
+- We have over 1,000,000 users worldwide.
+
+</div>
+</div>
 
 Use numerals for numbers in the millions for dates, addresses, units of measurement, currencies and percentages.
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>The temperature can reach 1,000,000°C in the pod.</DoAndDont.Item>
-		<DoAndDont.Item>The cargo ship can carry up to 1,000,000kg.</DoAndDont.Item>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
 
-		<DoAndDont.Item>The success rate of our new implementation is 1,000,000%.</DoAndDont.Item>
-		<DoAndDont.Item>The project budget is $1,000,000. </DoAndDont.Item>
-	</DoAndDont.Do>
-</DoAndDont>
+- The temperature can reach 1,000,000°C in the pod.
+- The cargo ship can carry up to 1,000,000kg.
+
+- The success rate of our new implementation is 1,000,000%.
+- The project budget is $1,000,000.
+
+</div>
+</div>
 
 ## Percentages
 
-Use the % symbol instead of writing out “percentage” within the user interface to save space.
+Use the % symbol instead of writing out "percentage" within the user interface to save space.
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>10%</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>10 percent</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- 10%
+
+</div>
+<div class="donts" markdown>
+
+- 10 percent
+
+</div>
+</div>
 
 Use % after the number and without a space.
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>10%</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>%10</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- 10%
+
+</div>
+<div class="donts" markdown>
+
+- %10
+
+</div>
+</div>
 
 ## Phone numbers
 
-Separate phone numbers into groups for clarity when backend localization or separate fields are not possible. 
+Separate phone numbers into groups for clarity when backend localization or separate fields are not possible.
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>Country code, area code, numbers in groupings of 3 or 4</DoAndDont.Item>
-		<DoAndDont.Item>0044, 208, 899 7032</DoAndDont.Item>
-	</DoAndDont.Do>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
 
-Use the plus symbol (+) or “00” before the country code and show extension numbers with a hyphen.
+- Country code, area code, numbers in groupings of 3 or 4
+- 0044, 208, 899 7032
 
-<DoAndDont>
-	<DoAndDont.Do>
-		<DoAndDont.Item>+49 123 456 7890</DoAndDont.Item>
-		<DoAndDont.Item>0049 123 456 7890</DoAndDont.Item>
-		<DoAndDont.Item>0123 456 7890-12</DoAndDont.Item>
-	</DoAndDont.Do>
-	<DoAndDont.Dont>
-		<DoAndDont.Item>0123 456 7890 12</DoAndDont.Item>
-	</DoAndDont.Dont>
-</DoAndDont>
+</div>
+</div>
+
+Use the plus symbol (+) or "00" before the country code and show extension numbers with a hyphen.
+
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- +49 123 456 7890
+- 0049 123 456 7890
+- 0123 456 7890-12
+
+</div>
+<div class="donts" markdown>
+
+- 0123 456 7890 12
+
+</div>
+</div>
 
 ## Related
 
