--- a/docs/guidelines/conversational-design/essentials/wording-terms.mdx
+++ b/docs/guidelines/conversational-design/essentials/wording-terms.mdx
@@ -251,7 +251,7 @@ Avoid punctuation, such as exclamation marks for buttons, hover text, titles and
   </DoAndDont.Dont>
 </DoAndDont>
 
-## Problematic wording to avoid 
+## Cognitive and emotional wording to avoid 
 
 Most problematic wording involves the bot expressing itself as a human with human emotions carrying out human cognitive processing. Ensure your bot persona has been prompted to avoid human-like, emotional responses.
 
