--- a/docs/components/time-picker/guide.mdx
+++ b/docs/components/time-picker/guide.mdx
@@ -38,7 +38,7 @@ An individual time item of a time picker has five states: Default, hover, active
 
 ![Time picker states](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Documentation-illustrations?node-id=5730-2897&t=ZhOOQlwBUWtHJWDA-4)
 
-## Dos and Don'ts
+## Dos and Don’ts
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
@@ -50,7 +50,7 @@ An individual time item of a time picker has five states: Default, hover, active
 </div>
 <div class="donts" markdown>
 
-- Don't clutter the time picker with unnecessary options
+- Don’t clutter the time picker with unnecessary options
 
 </div>
 </div>
