--- a/docs/guidelines/conversational-design/essentials/wording-terms.mdx
+++ b/docs/guidelines/conversational-design/essentials/wording-terms.mdx
@@ -24,15 +24,15 @@ Note: Some elements offer more than one option for you to select depending on yo
 Use any of the five messages depending on your product and use case.
 
 - **Generic welcome:** Hello, how can I help you today?
-- **With chatbot name:** Hello, I'm [Copilot name]. How can I help you today?
-- **With product name:** Hello, I'm your [product name] Copilot. How can I help you today?
+- **With chatbot name:** Hello, I’m [Copilot name]. How can I help you today?
+- **With product name:** Hello, I’m your [product name] Copilot. How can I help you today?
 - **With username:** Hello Felix, how can I help you today?
 - **With product and username:** Hello Sara, I'm  [Copilot name]. How can I help you today?
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
 
-- Well, hello! I'm your friendly chatbot.
+- Well, hello! I’m your friendly chatbot.
 - Welcome to chatbot. State your issue now.
 - What do you want?
 
@@ -55,7 +55,7 @@ Use these universal, non-specific options to encourage solution and technology-f
 
 - Ask me anything…
 - Start typing…
-- What's on your mind?
+- What’s on your mind?
 
 </div>
 </div>
@@ -130,7 +130,7 @@ Use “Recording…” as feedback to show the feature is working.
 </div>
 <div class="donts" markdown>
 
-- I'm listening…
+- I’m listening…
 
 </div>
 </div>
@@ -304,7 +304,7 @@ Avoid prompting emotional language like “I’m afraid…” in industrial chat
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
 
-- I'm afraid that I can't help you right now as I'm assessing the data.
+- I’m afraid that I can’t help you right now as I’m assessing the data.
 - I understand what you mean.
 
 </div>
