--- a/docs/guidelines/language/formatting/numbers.mdx
+++ b/docs/guidelines/language/formatting/numbers.mdx
@@ -62,12 +62,12 @@ Write numbers as digits, such as "9" instead of "nine", in industrial user inter
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
 
-- We've released 3 new features this month.
+- We’ve released 3 new features this month.
 
 </div>
 <div class="donts" markdown>
 
-- We've released three new features this month.
+- We’ve released three new features this month.
 
 </div>
 </div>
