--- a/docs/components/input-time/guide.mdx
+++ b/docs/components/input-time/guide.mdx
@@ -67,7 +67,7 @@ Time input has five states: Default, hover, disabled, read-only and focused.
 </div>
 <div class="donts" markdown>
 
-- Don't use the same input for start and end times, instead separate them
+- Don’t use the same input for start and end times, instead separate them
 
 </div>
 </div>
