--- a/docs/guidelines/language/formatting/date.mdx
+++ b/docs/guidelines/language/formatting/date.mdx
@@ -123,7 +123,7 @@ Avoid using "st" (as in 1st) or "th" (as in 5th) for a cleaner user interface.
 
 ## Days
 
-Start all days with a capital letter. Use three-letter abbreviations without punctuation when there isn't enough space.
+Start all days with a capital letter. Use three-letter abbreviations without punctuation when there isn’t enough space.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
@@ -160,7 +160,7 @@ Avoid calendar weeks (CW) whenever possible as these are very specific to certai
 
 ## Months
 
-Start all months with a capital letter. Use abbreviations without punctuation when there isn't enough space.
+Start all months with a capital letter. Use abbreviations without punctuation when there isn’t enough space.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
@@ -188,7 +188,7 @@ Use the four-digit format and never abbreviate in industrial applications.
 </div>
 <div class="donts" markdown>
 
-- '23
+- ’23
 
 </div>
 </div>
@@ -205,7 +205,7 @@ Use plural -s when talking about decades.
 </div>
 <div class="donts" markdown>
 
-- 1980's
+- 1980’s
 
 </div>
 </div>
