docs(DoAndDont): remove DoAndDont component and replace by simple html/css approach (#151)

--- a/docs/components/time-picker/guide.mdx
+++ b/docs/components/time-picker/guide.mdx
@@ -2,7 +2,6 @@
 doc-type: 'tab-item'
 ---
 
-import DoAndDont from '@site/src/components/DoAndDont';
 
 # Time picker - Usage
 
@@ -41,25 +40,20 @@ An individual time item of a time picker has five states: Default, hover, active
 
 ## Dos and Don’ts
 
-<DoAndDont>
-  <DoAndDont.Do>
-    <DoAndDont.Item>
-      Do use the time picker to ensure accurate time selection (we recommend to
-      use [time inputs](../input-time) for that reason)
-    </DoAndDont.Item>
-    <DoAndDont.Item>
-      Do provide clear instructions and labels for users
-    </DoAndDont.Item>
-    <DoAndDont.Item>
-      Do ensure the time picker is accessible via keyboard
-    </DoAndDont.Item>
-  </DoAndDont.Do>
-  <DoAndDont.Dont>
-    <DoAndDont.Item>
-      Don’t clutter the time picker with unnecessary options
-    </DoAndDont.Item>
-  </DoAndDont.Dont>
-</DoAndDont>
+<div class="dos-and-donts" markdown>
+<div class="dos" markdown>
+
+- Do use the time picker to ensure accurate time selection (we recommend to use [time inputs](../input-time) for that reason)
+- Do provide clear instructions and labels for users
+- Do ensure the time picker is accessible via keyboard
+
+</div>
+<div class="donts" markdown>
+
+- Don’t clutter the time picker with unnecessary options
+
+</div>
+</div>
 
 ## Related
 
