added react angular starter app table

--- a/docs/home/getting-started/starter-app.mdx
+++ b/docs/home/getting-started/starter-app.mdx
@@ -17,8 +17,7 @@ import image from './images/starter-app.png';
   marginBlockEnd: '2rem',
 }}>
 <section>
-      Explore the code and get started quickly by visiting our [GitHub repository](https://github.com/siemens/ix-starter/).
-      Or view the starter app [here](https://siemens.github.io/ix-starter/react-starter/).
+      Explore the code and get started quickly by visiting our GitHub repository or view the starter apps [here](#starter-apps).
 
   </section>
   <img src={image}
@@ -29,6 +28,15 @@ import image from './images/starter-app.png';
     }}
   />
 
+</div>
+
+## Starter apps {#starter-apps}
+
+<div class="table-full-width table-column-equal-width">
+| **Framework** | **GitHub repository** | **Preview** |
+| :-------- | :-------- | :-------- |
+| React | [react-starter](https://github.com/siemens/ix-starter/tree/main/apps/react-starter) | [View](https://siemens.github.io/ix-starter/react-starter/) |
+| Angular | [angular-starter](https://github.com/siemens/ix-starter/tree/main/apps/angular-starter) | [View](https://siemens.github.io/ix-starter/angular-starter/) |
 </div>
 
 ## Key features
