Added actual Figma illustrations on date picker

--- a/docs/components/date-picker/guide.mdx
+++ b/docs/components/date-picker/guide.mdx
@@ -6,14 +6,13 @@ doc-type: 'tab-item'
 
 Date pickers provide a versatile calendar that can be used as a standalone element or within a dropdown for date input, offering a seamless way to select dates.
 
-![Date picker anatomy](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Documentation-illustrations?node-id=XXXX-XXXX&t=XXXXXXXXXXXXXXXX-4)
+![Date picker anatomy](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Documentation-illustrations?node-id=7436-1700&t=BStIEA03mmCLaHAL-4)
 
-1. Date picker container
-2. Month and year header with navigation
-3. Weekday labels
-4. Calendar days
-5. Selected date or date range
-6. Confirm [button](../button)
+1. Month and year navigation
+2. Weekday labels
+3. Calendar weeks
+4. Selected date or date range
+5. Confirm [button](../button)
 
 ## Options
 
@@ -39,9 +38,9 @@ Date pickers provide a versatile calendar that can be used as a standalone eleme
 
 ## States
 
-Individual calendar dates within a date picker have multiple states: Default, hover, active, disabled, selected and focused. Dates outside the allowed range appear in a disabled state and cannot be selected.
+Individual calendar dates within a date picker have five states: Default, hover, active, disabled and focused. Dates outside the allowed range appear in a disabled state and cannot be selected.
 
-![Date picker states](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Documentation-illustrations?node-id=XXXX-XXXX&t=XXXXXXXXXXXXXXXX-4)
+![Date picker states](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Documentation-illustrations?node-id=7436-1708&t=BStIEA03mmCLaHAL-4)
 
 ## Dos and Don'ts
 
